--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Weather App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h1>Weather App</h1>
+        <div class="input-section">
+            <input type="text" id="cityInput" placeholder="Enter City Name" />
+            <button id="getWeatherBtn">Get Weather</button>
+        </div>
+        <div class="weather-data" id="weatherData">
+            <!-- Weather information will appear here -->
+        </div>
+    </div>
     
+    <script src="scripts.js"></script>
 </body>
 </html>
