changes in html

--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ 
+    <h1 class="text-center text-white py-4 bg-zinc-800 cursor-pointer">Weather App</h1>
+    
     <div class="container">
-        <h1>Weather App</h1>
         <div class="input-section">
             <input type="text" id="cityInput" placeholder="Enter City Name" />
             <button id="getWeatherBtn">Get Weather</button>
         </div>
-        <div class="weather-data" id="weatherData">
-            <!-- Weather information will appear here -->
-        </div>
+        <div class="weather-data" id="weatherData"></div>
     </div>
-    
+
+    <footer class="bg-zinc-800 text-white text-center py-4">
+         © 2024 Weather-App BY VISHNU GUPTA
+    </footer>
+
     <script src="scripts.js"></script>
 </body>
 </html>
